--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,23 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+VERSION_NAME=1.0-SNAPSHOT
+VERSION_CODE=1
+GROUP=com.mikhaellopez.circularimageview
+
+POM_DESCRIPTION=This is an Android project allowing to realize a circular ImageView in the simplest way possible
+POM_URL=https://github.com/lopspower/CircularImageView
+POM_SCM_URL=https://github.com/lopspower/CircularImageView
+POM_SCM_CONNECTION=scm:git@github.com:lopspower/CircularImageView.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:lopspower/CircularImageView.git
+POM_LICENCE_NAME=The MIT License (MIT)
+POM_LICENCE_URL=http://opensource.org/licenses/MIT
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=lopspower
+POM_DEVELOPER_NAME=Mikhael Lopez
+
+COMPILE_SDK_VERSION=23
+BUILD_TOOLS_VERSION=23.0.1
+MIN_SDK_VERSION=15
+TARGET_SDK_VERSION=23
