--- a/gradle.properties
+++ b/gradle.properties
@@ -17,8 +17,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-VERSION_NAME=1.0-SNAPSHOT
-VERSION_CODE=1
+VERSION_NAME=2.0
+VERSION_CODE=2
 GROUP=com.mikhaellopez.circularimageview
 
 POM_DESCRIPTION=This is an Android project allowing to realize a circular ImageView in the simplest way possible
