Config gradle files to add library in Maven Central

--- a/CircularImageView-Library/build.gradle
+++ b/CircularImageView-Library/build.gradle
@@ -19,4 +19,4 @@ android {
     }
 }
 
-apply from: 'https://raw.githubusercontent.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
+apply from: 'maven-push.gradle'
