--- a/CircularImageView-Library/gradle.properties
+++ b/CircularImageView-Library/gradle.properties
@@ -1,3 +1,20 @@
 POM_NAME=CircularImageView
 POM_ARTIFACT_ID=circularimageview
 POM_PACKAGING=aar
+VERSION_NAME=1.0.0
+VERSION_CODE=1
+GROUP=com.mikhaellopez.circularimageview
+
+POM_DESCRIPTION=This is an Android project allowing to realize a circular ImageView in the simplest way possible
+POM_URL=https://github.com/lopspower/CircularImageView
+POM_SCM_URL=https://github.com/lopspower/CircularImageView
+POM_SCM_CONNECTION=scm:git@github.com:lopspower/CircularImageView.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:lopspower/CircularImageView.git
+POM_LICENCE_NAME=The MIT License (MIT)
+POM_LICENCE_URL=http://opensource.org/licenses/MIT
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=lopspower
+POM_DEVELOPER_NAME=Mikhael Lopez
+
+SNAPSHOT_REPOSITORY_URL=https://oss.sonatype.org/content/repositories/snapshots
+RELEASE_REPOSITORY_URL=https://oss.sonatype.org/service/local/staging/deploy/maven2
