--- a/CircularImageView-Sample/build.gradle
+++ b/CircularImageView-Sample/build.gradle
@@ -6,8 +6,8 @@ android {
     defaultConfig {
         minSdkVersion Integer.parseInt(project.MIN_SDK_VERSION)
         targetSdkVersion Integer.parseInt(project.TARGET_SDK_VERSION)
-        versionCode Integer.parseInt(project.VERSION_CODE)
-        versionName project.VERSION_NAME
+        versionCode 1
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -22,7 +22,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile project(':CircularImageView-Library')
-    //compile 'com.mikhaellopez.circularimageview:circularimageview:2.0'
+    //compile 'com.mikhaellopez.circularimageview:circularimageview:1.0'
 }
-
-apply from: 'https://raw.githubusercontent.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
