Change code version to futur release

--- a/CircularImageView-Library/gradle.properties
+++ b/CircularImageView-Library/gradle.properties
@@ -1,9 +1,9 @@
 POM_NAME=CircularImageView
 POM_ARTIFACT_ID=circularimageview
 POM_PACKAGING=aar
-VERSION_NAME=1.0.0
-VERSION_CODE=1
-GROUP=com.mikhaellopez.circularimageview
+VERSION_NAME=2.0.1
+VERSION_CODE=4
+GROUP=com.mikhaellopez
 
 POM_DESCRIPTION=This is an Android project allowing to realize a circular ImageView in the simplest way possible
 POM_URL=https://github.com/lopspower/CircularImageView
