--- a/CircularImageView-Library/build.gradle
+++ b/CircularImageView-Library/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 // This is the library version used when deploying the artifact
-version = "2.0.0"
+version = "2.0.1"
 
 android {
     compileSdkVersion 23
@@ -12,7 +12,7 @@ android {
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 23
-        versionCode 2
+        versionCode 4
         versionName version
     }
 
@@ -37,7 +37,7 @@ install {
                 packaging 'aar'
 
                 // Add your description here
-                name 'CircularImageView'
+                name 'circularimageview'
                 description = 'This is an Android project allowing to realize a circular ImageView in the simplest way possible.'
                 url siteUrl
 
