--- a/circularimageview-example/build.gradle
+++ b/circularimageview-example/build.gradle
@@ -21,7 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.mikhaellopez:circularimageview:2.0.2'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.mikhaellopez:circularimageview:2.1.0'
+    compile 'com.larswerkman:lobsterpicker:1.0.0'
 }
