--- a/circularimageview/src/main/AndroidManifest.xml
+++ b/circularimageview/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mikhaellopez.circularimageview">
 
-    <application
-        android:allowBackup="true"
-        android:supportsRtl="true" />
+    <application />
 
 </manifest>
