--- a/circularimageview-example/build.gradle
+++ b/circularimageview-example/build.gradle
@@ -1,16 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
-
+    compileSdkVersion androidCompileSdkVersion
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 3
-        versionName "1.2"
+        applicationId "com.mikhaellopez.circularimageviewsample"
+        minSdkVersion androidMinSdkVersion
+        targetSdkVersion androidTargetSdkVersion
+        versionCode 1
+        versionName "1.0"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -20,7 +18,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.mikhaellopez:circularimageview:3.0.2'
-    compile 'com.larswerkman:lobsterpicker:1.0.0'
+    implementation project(':circularimageview')
+    //implementation "com.mikhaellopez:circularimageview:$androidVersionName"
+    implementation appCompat
+    implementation lobsterPicker
 }
