--- a/circularimageview/src/main/AndroidManifest.xml
+++ b/circularimageview/src/main/AndroidManifest.xml
@@ -1,8 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mikhaellopez.circularimageview">
-
-    <application
-        android:allowBackup="true"
-        android:supportsRtl="true" />
-
-</manifest>
+<manifest package="com.mikhaellopez.circularimageview" />
