Publish new version 3.1.0

--- a/circularimageview-example/build.gradle
+++ b/circularimageview-example/build.gradle
@@ -18,8 +18,8 @@ android {
 }
 
 dependencies {
-    implementation project(':circularimageview')
-    //implementation "com.mikhaellopez:circularimageview:$androidVersionName"
+    //implementation project(':circularimageview')
+    implementation "com.mikhaellopez:circularimageview:$androidVersionName"
     implementation appCompat
     implementation lobsterPicker
 }
