Imporve gradle script to publish to jCenter

--- a/circularimageview/build.gradle
+++ b/circularimageview/build.gradle
@@ -22,21 +22,29 @@ dependencies {
     implementation appCompat
 }
 
-//region PUBLISH TO JCENTER & MAVEN CENTRAL
+//region Publish to jCenter
+def libGroupId = 'com.mikhaellopez'
+def libArtifactId = 'circularimageview'
+def libVersion = androidVersionName
+def libDesc = 'This is an Android project allowing to realize a circular ImageView in the simplest way possible.'
+def libLicenses = ['Apache-2.0']
+def libVCSUrl = 'https://github.com/lopspower/CircularImageView.git'
+
+// Generate Soucre Jar
 task sourceJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
     classifier "sources"
 }
 
-// Create the publication with the pom configuration:
+// Create the publication with the pom configuration
 publishing {
     publications {
         MyPublication(MavenPublication) {
-            groupId 'com.mikhaellopez'
-            artifactId 'circularimageview'
-            version androidVersionName
+            groupId libGroupId
+            artifactId libArtifactId
+            version libVersion
             artifact(sourceJar)
-            artifact("$buildDir/outputs/aar/circularimageview-release.aar")
+            artifact("$buildDir/outputs/aar/$libArtifactId-release.aar")
         }
     }
 }
@@ -51,13 +59,13 @@ bintray {
     publications = ['MyPublication']
     pkg {
         repo = "maven"
-        name = "com.mikhaellopez:circularimageview"
-        desc = 'This is an Android project allowing to realize a circular ImageView in the simplest way possible.'
-        licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/lopspower/CircularImageView.git'
+        name = "$libGroupId:$libArtifactId"
+        desc = libDesc
+        licenses = libLicenses
+        vcsUrl = libVCSUrl
         version {
-            name = androidVersionName
-            vcsTag = androidVersionName
+            name = libVersion
+            vcsTag = libVersion
             released = new Date()
         }
     }
