Rewrite CircularImageView in Kotlin for 4.0.0

--- a/circularimageview-example/build.gradle
+++ b/circularimageview-example/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion androidCompileSdkVersion
@@ -12,7 +14,6 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -20,6 +21,7 @@ android {
 dependencies {
     implementation project(':circularimageview')
     //implementation "com.mikhaellopez:circularimageview:$androidVersionName"
-    implementation appCompat
+    implementation kotlinStdlib
+    implementation androidXAppCompat
     implementation lobsterPicker
 }
