--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,8 +7,8 @@ allprojects {
 
 ext {
     // APP VERSION
-    androidVersionCode          = 13
-    androidVersionName          = "4.0.0"
+    androidVersionCode          = 14
+    androidVersionName          = "4.0.1"
 
     // ANDROID VERSION
     androidCompileSdkVersion    = 28
@@ -16,7 +16,10 @@ ext {
     androidTargetSdkVersion     = 28
 
     // KOTLIN
-    kotlinStdlib                = "org.jetbrains.kotlin:kotlin-stdlib:${ext.kotlin_version}"
+    kotlinStdlibGroupId         = "org.jetbrains.kotlin"
+    kotlinStdlibArtifactId      = "kotlin-stdlib"
+    kotlinStdlibVersion         = ext.kotlin_version
+    kotlinStdlib                = "$kotlinStdlibGroupId:$kotlinStdlibArtifactId:$kotlinStdlibVersion"
 
     // ANDROID LIB
     androidAppCompatXVersion    = '1.0.2'
