--- a/circularimageview/build.gradle
+++ b/circularimageview/build.gradle
@@ -1,17 +1,24 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
+}
+
+apply from: rootProject.file('gradle/publish-mavencentral.gradle')
 
 android {
     compileSdkVersion androidCompileSdkVersion
     defaultConfig {
         minSdkVersion androidMinSdkVersion
         targetSdkVersion androidTargetSdkVersion
-        versionCode androidVersionCode
-        versionName androidVersionName
     }
     buildTypes {
         release {
             minifyEnabled false
+        }
+    }
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
         }
     }
 }
@@ -20,5 +27,3 @@ dependencies {
     implementation kotlinStdlib
     implementation androidXAppCompat
 }
-
-apply from: rootProject.file('gradle/publish-mavencentral.gradle')
