--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,19 @@
+# Project-wide Gradle settings.
+
+# Gradle
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+org.gradle.jvmargs=-Xmx3072m
+
+# Kotlin
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
+
+# Android
+# When set to true, this flag indicates that you want to start using AndroidX from now on.
+# If the flag is absent, Android Studio behaves as if the flag were set to false.
 android.useAndroidX=true
+# When set to true, this flag indicates that you want to have tool support (from the Android Gradle
+# plugin) to automatically convert existing third-party libraries as if they were written for
+# AndroidX. If the flag is absent, Android Studio behaves as if the flag were set to false.
+android.enableJetifier=true
