--- a/circularimageview-example/src/main/AndroidManifest.xml
+++ b/circularimageview-example/src/main/AndroidManifest.xml
@@ -3,15 +3,13 @@
     package="com.mikhaellopez.circularimageviewsample">
 
     <application
-        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Base.Theme"
         tools:ignore="GoogleAppIndexingWarning">
-
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
